# noilib-simple-rs

./: Cargo.toml  README.md
benches/: bench.rs
examples/: perlin-octaves.rs  perlin.rs  value-octaves.rs  value.rs
src/: lib.rs
tests/: test.rs
