[package]
name = "noilib-simple"
version = "0.5.0"
edition = "2021"
description = "A simple noise library"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/engusmaze/noilib-simple-rs"
homepage = "https://github.com/engusmaze/noilib-simple-rs"
exclude = ["test-images/"]
authors = ["Michael <labyrinthstudio24@gmail.com>"]

[[test]]
name = "test"

[[bench]]
name = "bench"

[[example]]
name = "perlin"

[[example]]
name = "value"

[[example]]
name = "value-octaves"

[[example]]
name = "perlin-octaves"

[dev-dependencies]
image = "0.24.2"

[dependencies]
